--- a/Droid/EmpDirForms.Droid.csproj
+++ b/Droid/EmpDirForms.Droid.csproj
@@ -15,7 +15,7 @@
     <AndroidApplication>True</AndroidApplication>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <AssemblyName>EmpDirForms.Droid</AssemblyName>
-    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -86,6 +86,7 @@
     <Reference Include="Xamarin.Forms.Maps">
       <HintPath>..\packages\Xamarin.Forms.Maps.1.4.2.6359\lib\MonoAndroid10\Xamarin.Forms.Maps.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
@@ -107,10 +108,19 @@
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable\iconemail.png" />
+    <AndroidResource Include="Resources\drawable\iconphone.png" />
+    <AndroidResource Include="Resources\drawable\icontwitter.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\iconemail.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\iconphone.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\icontwitter.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\iconemail.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\iconphone.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\icontwitter.png" />
   </ItemGroup>
   <Import Project="..\EmpDirForms\EmpDirForms.projitems" Label="Shared" Condition="Exists('..\EmpDirForms\EmpDirForms.projitems')" />
-  <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.4.2.6359\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.4.2.6359\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ItemGroup>
     <XamarinComponentReference Include="json.net">
       <Version>6.0.8.1</Version>
@@ -120,17 +130,6 @@
       <Version>6.3.0.1</Version>
       <Visible>False</Visible>
     </XamarinComponentReference>
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\drawable\icon-email.png" />
-    <BundleResource Include="Resources\drawable\icon-phone.png" />
-    <BundleResource Include="Resources\drawable\icon-twitter.png" />
-    <BundleResource Include="Resources\drawable-hdpi\icon-email.png" />
-    <BundleResource Include="Resources\drawable-hdpi\icon-phone.png" />
-    <BundleResource Include="Resources\drawable-hdpi\icon-twitter.png" />
-    <BundleResource Include="Resources\drawable-xhdpi\icon-email.png" />
-    <BundleResource Include="Resources\drawable-xhdpi\icon-phone.png" />
-    <BundleResource Include="Resources\drawable-xhdpi\icon-twitter.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="wlclient.properties" />
