--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.xamarin.empdirforms">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19" />
-	<application android:label="EmpDirForms">
+	<uses-sdk android:minSdkVersion="22" />
+	<application android:label="Employees">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyARW4xfG6q5WVhM9uAf5TIlFUGlCSOdVyk" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
