--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Android.Support.v4" version="22.1.1.1" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.1.1.1" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="22.1.1.1" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Forms.Maps" version="1.4.2.6359" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.GooglePlayServices" version="22.0.0.2" targetFramework="MonoAndroid50" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Forms.Maps" version="2.0.1.6505" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Base" version="26.0.0.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="26.0.0.0" targetFramework="MonoAndroid60" />
 </packages>
