--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>EmpDirForms</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.xamarin.empdirforms</string>
 	<key>CFBundleShortVersionString</key>
@@ -59,5 +57,12 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>CFBundleName</key>
+	<string>Employees</string>
 </dict>
 </plist>
