--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.xamarin.empdirforms">
 	<uses-sdk android:minSdkVersion="22" />
 	<application android:label="Employees">
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyARW4xfG6q5WVhM9uAf5TIlFUGlCSOdVyk" />
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="[YOUR KEY HERE]" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
